--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ on:
       - 'main'
 jobs:
   code-edit-text-view-tests:
-    name: Testing CodeEditTextView
+    name: Testing CodeEditKit
     runs-on: macos-12
     steps:
       - name: Checkout repository
