--- a/.github/workflows/swiftlint.yml
+++ b/.github/workflows/swiftlint.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: GitHub Action for SwiftLint with --strict
-        run: switlint --strict
+        run: swiftlint --strict
         # uses: norio-nomura/action-swiftlint@3.2.1
         # with:
         #   args: --strict
