add swiftlint and fix warnings
Signed-off-by: Wouter01 <wouterhennen@gmail.com>

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,9 +1,10 @@
 disabled_rules:
-  - todo
-  - trailing_comma
-  - nesting
+  - force_cast
+
+line_length: 160
 
 type_name:
+  allowed_symbols: ['_']
   excluded:
     - ID
 
@@ -11,6 +12,4 @@ identifier_name:
   min_length: 2
   allowed_symbols: ['_']
   excluded:
-    - c
     - id
-    - vc
